[gd_scene load_steps=33 format=3 uid="uid://dt5118104tt4"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_3qwrq"]
[ext_resource type="Texture2D" uid="uid://dvxjvkjlsuwqy" path="res://Assets/Character/character_sheet3.png" id="2_1ep77"]
[ext_resource type="Texture2D" uid="uid://c4pr8g7gv627f" path="res://Assets/Character/character_attack.png" id="2_4o2vr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hcsgo"]
atlas = ExtResource("2_4o2vr")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahssf"]
atlas = ExtResource("2_4o2vr")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_70ato"]
atlas = ExtResource("2_4o2vr")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qece"]
atlas = ExtResource("2_4o2vr")
region = Rect2(0, 100, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_abmv0"]
atlas = ExtResource("2_4o2vr")
region = Rect2(50, 100, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvvt5"]
atlas = ExtResource("2_4o2vr")
region = Rect2(100, 100, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba5mh"]
atlas = ExtResource("2_4o2vr")
region = Rect2(0, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqxgc"]
atlas = ExtResource("2_4o2vr")
region = Rect2(50, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygtgy"]
atlas = ExtResource("2_4o2vr")
region = Rect2(100, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6ejs"]
atlas = ExtResource("2_1ep77")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgiml"]
atlas = ExtResource("2_1ep77")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjeh1"]
atlas = ExtResource("2_1ep77")
region = Rect2(0, 250, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_500f8"]
atlas = ExtResource("2_1ep77")
region = Rect2(50, 250, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_wax7d"]
atlas = ExtResource("2_1ep77")
region = Rect2(0, 200, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_uh121"]
atlas = ExtResource("2_1ep77")
region = Rect2(50, 200, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4q07"]
atlas = ExtResource("2_1ep77")
region = Rect2(0, 100, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_gncbv"]
atlas = ExtResource("2_1ep77")
region = Rect2(50, 100, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_1oh13"]
atlas = ExtResource("2_1ep77")
region = Rect2(0, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vf1e"]
atlas = ExtResource("2_1ep77")
region = Rect2(50, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8yng"]
atlas = ExtResource("2_1ep77")
region = Rect2(0, 100, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_rp1gb"]
atlas = ExtResource("2_1ep77")
region = Rect2(50, 100, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mwjb"]
atlas = ExtResource("2_1ep77")
region = Rect2(0, 150, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ti2yq"]
atlas = ExtResource("2_1ep77")
region = Rect2(50, 150, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyh4"]
atlas = ExtResource("2_1ep77")
region = Rect2(0, 150, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmov0"]
atlas = ExtResource("2_1ep77")
region = Rect2(50, 150, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_nthmc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcsgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahssf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70ato")
}],
"loop": false,
"name": &"attack down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qece")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abmv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvvt5")
}],
"loop": false,
"name": &"attack side",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba5mh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqxgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygtgy")
}],
"loop": false,
"name": &"attack up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6ejs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgiml")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjeh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_500f8")
}],
"loop": true,
"name": &"idle side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wax7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uh121")
}],
"loop": true,
"name": &"idle up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4q07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gncbv")
}],
"loop": true,
"name": &"walk down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1oh13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vf1e")
}],
"loop": true,
"name": &"walk side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8yng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rp1gb")
}],
"loop": true,
"name": &"walk side down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mwjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ti2yq")
}],
"loop": true,
"name": &"walk side up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmov0")
}],
"loop": true,
"name": &"walk up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qxuel"]
size = Vector2(11, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pwidc"]
size = Vector2(11, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t1mnm"]
size = Vector2(12.25, 11)

[node name="Player" type="CharacterBody2D"]
light_mask = 2
visibility_layer = 15
z_index = 3
texture_filter = 1
collision_layer = 10
collision_mask = 15
script = ExtResource("1_3qwrq")

[node name="PlayerAnimation" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_nthmc")
animation = &"walk side up"
autoplay = "idle"

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 4)
shape = SubResource("RectangleShape2D_qxuel")

[node name="PlayerHitbox" type="Area2D" parent="." groups=["player"]]

[node name="HitboxShape" type="CollisionShape2D" parent="PlayerHitbox"]
position = Vector2(0.5, 6)
shape = SubResource("RectangleShape2D_pwidc")

[node name="PlayerAttackArea" type="Area2D" parent="." groups=["Attack"]]

[node name="AttackShape" type="CollisionShape2D" parent="PlayerAttackArea"]
position = Vector2(6.55651e-07, 15.5)
shape = SubResource("RectangleShape2D_t1mnm")
disabled = true

[connection signal="animation_finished" from="PlayerAnimation" to="." method="_on_player_animation_animation_finished"]
[connection signal="area_entered" from="PlayerHitbox" to="." method="_on_player_hitbox_area_entered"]
[connection signal="body_entered" from="PlayerHitbox" to="." method="_on_player_hitbox_body_entered"]
